--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,6 @@
-
-/* Your CSS Code here. */
-element .holder{
+.holder {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    }
-    .item-1{
-        width: 100px;
-        height: 100px;
-        background: black;
-    }
+    align-items: center;
+}
